# xtorch-bridge

./: .gitignore  1.py  2.12  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  build.sh  cmake_install.cmake  create_model.py  ctypes_test.py  example.py  lenet_model.pt  model.pt  pyproject.toml  requirements.txt  setup-back.py  setup-dd.py  setup.py  simple_forward.py  simple_test.py  t1.py  test_bridge.py  test_direct.py  test_train.py  train_mnist.py  train_mnist_cpp.py
TEMP/: CMakeLists.txt  README.MD  pyproject.toml  setup.py  simple_test.py  test_bridge.py
TEMP/include/xtorch_bridge/: python_data_loader_bridge.h
TEMP/src/: bindings.cpp
TEMP/temp/: pyproject.toml
TEMP/xtorch_bridge/: __init__.py
cpp/: xtorch_wrapper.cpp
src/: bindings.cpp  python_data_loader_bridge.cpp  python_data_loader_wrapper.cpp
temp/: setup.py
temp/xtorch_bridge/: loader.py
torch_cpp/: __init__.py  torch_cpp.cpp
torch_cpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xtorch_bridge/: __init__.py  loader.py  xtorch_bridge-google.cpp  xtorch_bridge.cpp
xtorch_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
