[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "cmake>=3.18",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "xtorch_bridge"
version = "0.1.0"
description = "A bridge to run xtorch C++ training from Python data loaders."
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

# Runtime dependencies for the user
dependencies = [
    "torch"
]

[tool.scikit-build]
# This tells scikit-build where to find the main CMakeLists.txt file.
# Since it's in the root, we just point to "."
cmake.source-dir = "."

# This section tells scikit-build where to install the final compiled module.
# We want to create a package named 'xtorch_bridge'.
wheel.packages = ["xtorch_bridge"]